--- a/css/docs.css
+++ b/css/docs.css
@@ -19,6 +19,25 @@ main > section {
 	padding: var(--a-space-xl) 0;
 }
 
+body.component-doc main > section > h1,
+body.component-doc main > section > h2,
+body.component-doc main > section > h3,
+body.component-doc main > section > p,
+body.component-doc main > section > article,
+body.component-doc main > section > div,
+body.component-doc main > section > header,
+body.component-doc main > section > nav,
+body.component-doc main > section > figure,
+body.component-doc main > section > pre,
+body.component-doc main > section > ul,
+body.component-doc main > section > ol,
+body.component-doc main > section > table,
+body.component-doc main > section > menu {
+	width: min(100%, calc(1200px - (var(--a-space-l) * 2)));
+	margin-left: auto;
+	margin-right: auto;
+}
+
 main > section:nth-child(even) {
 	background-color: var(--a-color-surface-variant);
 }
